# tbaums-io

./: 404.html  index.html  package-lock.json  package.json
.github/workflows/: gh-pages.yml
assets/dioxus/: tbaums-io.js  tbaums-io.js.br  tbaums-io_bg.wasm  tbaums-io_bg.wasm.br
assets/dioxus/snippets/dioxus-interpreter-js-7e2aed97ebee2c55/: inline0.js  inline0.js.br
css/: style.comp.css  style.css  style.prefix.css
docs/: 404.html  tailwind.css
docs/assets/dioxus/: tbaums-io.js  tbaums-io.js.br  tbaums-io_bg.wasm.br
docs/assets/dioxus/snippets/dioxus-interpreter-js-7e2aed97ebee2c55/: inline0.js  inline0.js.br
sass/: main.scss
sass/base/: _base.scss  _typography.scss  _variables.scss
sass/components/: _button.scss  _card.scss  _feature.scss  _text-box.scss
sass/layout/: _footer.scss  _header.scss  _info.scss  _intro.scss  _projects.scss
tbaums-io/: Cargo.toml  Dioxus.toml  tailwind.config.js
tbaums-io/src/: main.rs
