[package]
name = "tbaums-io"
version = "0.1.0"
authors = ["Michael Tanenbaum <m.tanenbaum@icloud.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

dioxus = { version = "0.5", features = ["web", "router"] }
dioxus-free-icons = { version = "0.8", features = ["font-awesome-brands", "hero-icons-solid"] }

# Debug
dioxus-logger = "0.5.1"
manganis = "0.2.2"
